manifests/opensearch-dashboards-2.2.0.tgz-manifest.yaml
---
# Source: opensearch-dashboards/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-opensearch-dashboards
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: opensearch-dashboards-2.2.0
    app.kubernetes.io/component: opensearch-dashboards
  annotations:

spec:
  type: ClusterIP
  sessionAffinity: None
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 5601
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/component: opensearch-dashboards
---
# Source: opensearch-dashboards/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-opensearch-dashboards
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: opensearch-dashboards-2.2.0
    app.kubernetes.io/component: opensearch-dashboards
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch-dashboards
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: opensearch-dashboards
  template:
    metadata:
      annotations:
        checksum/tls-certificate: 58f16f1c2daad7c3241153c94daa26d21c3a23c61fdad2cf4bd9477712ebb7b7
        checksum/config: c7b680e227e6edabf58bd355f0e59f9e9acf6b10282f441940c9f8801a78bbcd
      labels:
        app.kubernetes.io/name: opensearch-dashboards
        helm.sh/chart: opensearch-dashboards-2.2.0
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "2.13.0"
        app.kubernetes.io/component: opensearch-dashboards
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: opensearch-dashboards
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1000
      serviceAccountName: my-release-opensearch-dashboards
      containers:
        - name: opensearch-dashboards
          image: docker.io/opensearchproject/opensearch-dashboards:2.13.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
          ports:
            - name: http
              containerPort: 5601
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /opt/opensearch/scripts/readiness-probe-script.sh
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /opt/opensearch/scripts/readiness-probe-script.sh
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: opensearch-dashboards-config
              mountPath: /usr/share/opensearch-dashboards/config/
            - name: opensearch-dashboards-certificates
              mountPath: /usr/share/opensearch-dashboards/config/server-certs/
              readOnly: true
            - name: scripts
              mountPath: /opt/opensearch/scripts/
              readOnly: true
      volumes:
        - name: opensearch-dashboards-certificates
          secret:
            secretName: my-release-opensearch-dashboards-crt
            defaultMode: 256
        - name: opensearch-dashboards-config
          configMap:
            name: my-release-opensearch-dashboards-conf
        - name: scripts
          configMap:
            name: my-release-opensearch-dashboards-scripts
            defaultMode: 493
---
# Source: opensearch-dashboards/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-opensearch-dashboards
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: opensearch-dashboards-2.2.0
    app.kubernetes.io/component: opensearch-dashboards
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-name: my-release-opensearch-dashboards.default.svc.cluster.local
    nginx.ingress.kubernetes.io/proxy-ssl-secret: default/my-release-opensearch-dashboards-crt
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: my-release-opensearch-dashboards.default.svc.cluster.local
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "true"
spec:
  rules:
    - host: opensearch-dashboards.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-release-opensearch-dashboards
                port:
                  name: http
